--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs",
-	"postinstall": "npm install && npm run build"
+	"postinstall": "npm run build"
   },
   "dependencies": {
     "dotenv-webpack": "^1.4.5",
