--- a/package.json
+++ b/package.json
@@ -14,20 +14,44 @@
     "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs",
 	"postinstall": "npm run build"
   },
+  "devDependencies": {
+	  "babel-core": "^6.22.1",
+	  "babel-eslint": "^7.1.1",
+	  "babel-loader": "^6.2.10",
+	  "babel-plugin-istanbul": "^4.1.1",
+	  "babel-plugin-transform-runtime": "^6.22.0",
+	  "babel-preset-env": "^1.3.2",
+	  "babel-preset-stage-2": "^6.22.0",
+	  "babel-register": "^6.22.0",
+	  "chai": "^3.5.0",
+	  "eslint": "^3.19.0",
+	  "eslint-config-airbnb-base": "^11.1.3",
+	  "eslint-friendly-formatter": "^2.0.7",
+	  "eslint-import-resolver-webpack": "^0.8.1",
+	  "eslint-loader": "^1.7.1",
+	  "eslint-plugin-html": "^2.0.0",
+	  "eslint-plugin-import": "^2.2.0",
+	  "karma": "^1.4.1",
+	  "karma-coverage": "^1.1.1",
+	  "karma-mocha": "^1.3.0",
+	  "karma-phantomjs-launcher": "^1.0.2",
+	  "karma-phantomjs-shim": "^1.4.0",
+	  "karma-sinon-chai": "^1.3.1",
+	  "karma-sourcemap-loader": "^0.3.7",
+	  "karma-spec-reporter": "0.0.30",
+	  "karma-webpack": "^2.0.2",
+	  "mocha": "^3.2.0",
+      "nightwatch": "^0.9.12",
+	  "phantomjs-prebuilt": "^2.1.14",
+	  "selenium-server": "^3.0.1",
+	  "sinon": "^2.1.0",
+	  "sinon-chai": "^2.8.0"
+  },
   "dependencies": {
     "dotenv-webpack": "^1.4.5",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1",
     "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
@@ -35,13 +59,6 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
-    "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
@@ -50,28 +67,13 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
-    "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
-    "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^11.3.4",
     "vue-style-loader": "^2.0.5",
