--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
     "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs",
-	"postinstall": "npm run build"
+    "postinstall": "npm run build"
   },
   "dependencies": {
-    "dotenv-webpack": "^1.4.5",
-    "vue": "^2.2.6",
-    "vue-router": "^2.3.1",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -35,6 +32,7 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "dotenv-webpack": "^1.4.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-friendly-formatter": "^2.0.7",
@@ -73,7 +71,10 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
+    "vue": "^2.2.6",
+    "vue-google-signin-button": "^1.0.2",
     "vue-loader": "^11.3.4",
+    "vue-router": "^2.3.1",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.3.3",
