--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,13 @@
 machine:
   node:
-   version: 7.8
-  dependencies:
-   pre:
-     - npm install -g npm
+   version: 7
+
 deployment:
   staging:
-    branch: master
+    branch: dev
     heroku:
-      appname: octo-job-board-test
+      appname: jobs-octo-test
   production:
     branch: master
     heroku:
-      appname: octo-job-board
+      appname: jobs-octo-production
