Add dependencies install

--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit",
-    "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs",
-	"heroku-postbuild": "npm run build"
+    "lint": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
     "dotenv-webpack": "^1.4.5",
