--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive"
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive",
+    "lint": "eslint --fix --ext .js routes test"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -17,6 +18,11 @@
   },
   "devDependencies": {
     "chai": "^4.0.2",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-node": "^5.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.4.2",
     "supertest": "^3.0.0"
   }
