--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "install": "(cd client && npm install) && (cd server && npm install)",
-    "start": "nodemon server/bin/www",
+    "start": "node server/bin/www",
+    "startmon": "nodemon server/bin/www",
     "test": "exit 0",
     "heroku-postbuild": "(cd client && npm run build)"
   },
