--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-*test/unit/coverage
+/**/coverage
+client/test/unit/coverage
 test/e2e/reports
 selenium-debug.log
 .env
