--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/**/coverage
+coverage
 client/test/unit/coverage
 test/e2e/reports
 selenium-debug.log
