--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"test:client": "(cd client && npm test)",
 		"test:server": "(cd server && npm test)",
 		"test": "npm run test:client && npm run test:server",
+		"release": "./tools/release/release.sh",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
