--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"test:client": "(cd client && npm test)",
 		"test:server": "(cd server && npm test)",
 		"test": "npm run test:client && npm run test:server",
+    "lint:client": "(cd client && npm run lint)",
+    "lint:server": "(cd server && npm run lint)",
+    "lint": "npm run lint:client && npm run lint:server",
 		"release": "./tools/release/release.sh",
     "heroku-postbuild": "npm run build"
   },
