--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive",
-    "lint": "eslint --fix --ext .js routes test"
+    "lint": "./node_modules/.bin/eslint --fix --ext .js routes test"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -20,6 +20,7 @@
     "chai": "^4.0.2",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
