Add clean NPM command (global and for client / server that delete generated and git ignored files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "install": "npm run install:client && npm run install:server",
     "build:client": "(cd client && npm run build)",
     "build": "npm run build:client",
+    "clean:client": "(cd client && npm run clean)",
+    "clean:server": "(cd server && npm run clean)",
+    "clean": "npm run clean:client && npm run clean:server",
     "start": "node server/bin/www",
     "startmon": "nodemon server/bin/www",
     "test:client": "(cd client && npm test)",
