--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
