--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
