--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf node_modules",
     "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive",
     "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch",
-    "lint": "./node_modules/.bin/eslint --fix --ext .js routes test"
+    "lint": "./node_modules/.bin/eslint --fix --ext .js src test"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
