--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "request": "^2.81.0",
+    "node-mailjet": "^3.1.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
