Add vuex store, actions / mutations related to authentication page + add router navigation guard

--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
   "homepage": "https://github.com/octo-web-front-end-tribe/octo-job-board#readme",
   "devDependencies": {
     "nodemon": "^1.11.0"
-  }
+  },
+  "dependencies": {}
 }
