--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "can-use-dom": "^0.1.0",
     "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chromedriver": "^2.27.2",
@@ -34,6 +35,7 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "dirty-chai": "^2.0.0",
     "dotenv-webpack": "^1.4.5",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
@@ -52,6 +54,7 @@
     "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
+    "karma-dirty-chai": "^1.0.2",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
@@ -79,11 +82,14 @@
     "vue-router": "^2.5.3",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.4",
+    "vuex": "^2.3.1",
+    "vuex-router-sync": "^4.2.0",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "engines": {
     "node": ">= 4.0.0",
