--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -5,3 +5,7 @@ GOOGLE_CLIENT_ID=
 OCTOPOD_API_URL=
 OCTOPOD_CLIENT_ID=
 OCTOPOD_CLIENT_SECRET=
+
+# MAILJET
+MAILJET_PUBLIC_KEY=
+MAILJET_SECRET_KEY=
