--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -6,6 +6,9 @@ OCTOPOD_API_URL=
 OCTOPOD_CLIENT_ID=
 OCTOPOD_CLIENT_SECRET=
 
-# MAILJET
+# MailJet
 MAILJET_PUBLIC_KEY=
 MAILJET_SECRET_KEY=
+
+# Application IDs crypto password
+AUTHORIZATION_PASSWORD=
