Add environment variable AUTHORIZATION_JWT_PASSWORD

--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -11,4 +11,5 @@ MAILJET_PUBLIC_KEY=
 MAILJET_SECRET_KEY=
 
 # Application IDs crypto password
+AUTHORIZATION_JWT_PASSWORD=
 AUTHORIZATION_PASSWORD=
