Add AuthorizationCodeValidator and call it into /auth/token route for grant_type 'authorization_code'

--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -11,5 +11,6 @@ MAILJET_PUBLIC_KEY=
 MAILJET_SECRET_KEY=
 
 # Application IDs crypto password
-AUTHORIZATION_JWT_PASSWORD=
+AUTHORIZATION_ALGORITHM=
 AUTHORIZATION_PASSWORD=
+AUTHORIZATION_CODES=
