Refactor POST /auth/token to return a standard JWT access token

--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,10 @@
     "express": "~4.15.2",
     "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^7.4.1",
     "morgan": "~1.8.1",
-    "request": "^2.81.0",
     "node-mailjet": "^3.1.0",
+    "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
