--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "clean": "rm -rf node_modules",
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive",
-    "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch",
     "lint": "./node_modules/.bin/eslint --fix --ext .js src test",
-    "coverage": "NODE_ENV=test nyc mocha --recursive"
+    "test": "npm run lint && NODE_ENV=test nyc mocha --recursive",
+    "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
