--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf node_modules",
     "lint": "./node_modules/.bin/eslint --fix --ext .js src test",
     "test": "npm run lint && NODE_ENV=test nyc mocha --recursive",
-    "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch"
+    "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
+    "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.3.0",
