--- a/client/package.json
+++ b/client/package.json
@@ -75,6 +75,7 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue": "^2.3.4",
+    "vue-analytics": "^4.1.2",
     "vue-loader": "^12.2.1",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.5.3",
