--- a/client/package.json
+++ b/client/package.json
@@ -63,6 +63,7 @@
     "karma-spec-reporter": "0.0.30",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
+    "lru-cache": "^4.1.1",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
