Extract mail-to information into environment variables

--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -16,3 +16,8 @@ AUTHORIZATION_PASSWORD=
 AUTHORIZATION_CODES=
 
 ACCESS_TOKEN_SECRET=
+
+# Coveralls code coverage
+COVERALLS_REPO_TOKEN=
+
+MAIL_TO=
