--- a/client/package.json
+++ b/client/package.json
@@ -86,6 +86,7 @@
     "vue-router": "^2.5.3",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.4",
+    "vue-toastr": "^2.0.7",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
