--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
+    "lru-cache": "^4.1.1",
     "morgan": "~1.8.1",
     "node-mailjet": "^3.1.0",
     "request": "^2.81.0",
@@ -31,8 +32,10 @@
     "chai-as-promised": "^7.0.0",
     "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-recommended": "^1.5.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "^2.6.1",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
