--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf node_modules",
     "lint": "./node_modules/.bin/eslint --ext .js src test",
     "lint:fix": "./node_modules/.bin/eslint --fix --ext .js src test",
-    "test": "npm run lint && NODE_ENV=test nyc mocha --recursive",
+    "test": "NODE_ENV=test nyc mocha --recursive",
     "test:watch": "NODE_ENV=test ./node_modules/mocha/bin/mocha --recursive --watch",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
