--- a/server/package.json
+++ b/server/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "dotenv": "^4.0.0",
-    "express": "~4.15.2",
+    "express": "^4.15.3",
     "google-auth-library": "^0.10.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^7.4.1",
     "lru-cache": "^4.1.1",
-    "morgan": "~1.8.1",
+    "morgan": "^1.8.2",
     "node-mailjet": "^3.1.0",
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2"
@@ -39,7 +39,6 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "lru-cache": "^4.1.1",
     "mocha": "^3.4.2",
     "nyc": "^11.0.2",
     "sinon": "^2.3.4",
