--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "lolex": "^1.6.0",
     "lru-cache": "^4.1.1",
     "mocha": "^3.2.0",
+    "moment": "^2.18.1",
     "nightwatch": "^0.9.12",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
