--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,10 @@
     "lint:fix": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "vue": "^2.3.4",
+    "vue-router": "^2.5.3"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.7.7",
     "axios": "^0.16.2",
     "babel-core": "^6.22.1",
@@ -78,13 +82,11 @@
     "sinon": "^2.4.1",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue": "^2.3.4",
     "vue-analytics": "^4.1.2",
     "vue-google-signin-button": "^1.0.2",
     "vue-js-modal": "^1.2.2",
     "vue-loader": "^12.2.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.5.3",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.3.4",
     "vue-toastr": "^2.0.8",
