--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:client": "(cd client && npm run lint)",
     "lint:server": "(cd server && npm run lint)",
     "lint": "npm run lint:client && npm run lint:server",
+    "lint:fix": "(cd client && npm run lint:fix) && (cd server && npm run lint:fix)",
     "release": "./tools/release/release.sh",
     "heroku-postbuild": "npm run build"
   },
