Add Slack notification when a user send a Feedback

--- a/tools/setup/sample.env
+++ b/tools/setup/sample.env
@@ -20,5 +20,9 @@ ACCESS_TOKEN_SECRET=
 # Coveralls code coverage
 COVERALLS_REPO_TOKEN=
 
+# Mailing
 MAIL_FROM=
 MAIL_TO=
+
+# Slack
+SLACK_WEBHOOK_URL=
