--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
+    "@slack/client": "^3.11.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
