--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -4,11 +4,8 @@
     "storage": "./src/db/data.development.sqlite"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "./src/db/data.test.sqlite"
   },
   "production": {
     "username": "root",
