--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "lru-cache": "^4.1.1",
     "morgan": "^1.8.2",
     "node-mailjet": "^3.2.1",
+    "node-schedule": "^1.2.4",
     "request": "^2.81.0",
     "sequelize": "^4.4.4",
     "sequelize-cli": "^2.8.0",
