Take into account Code Review remarks

--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -7,6 +7,13 @@
     "dialect": "sqlite",
     "storage": "./src/db/data.test.sqlite"
   },
+  "staging": {
+    "username": "root",
+    "password": null,
+    "database": "database_production",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
   "production": {
     "username": "root",
     "password": null,
