--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "vue": "^2.3.4",
+    "vue-awesome": "^2.3.1",
     "vue-router": "^2.6.0"
   },
   "devDependencies": {
