--- a/client/package.json
+++ b/client/package.json
@@ -87,6 +87,7 @@
     "vue-google-signin-button": "^1.0.2",
     "vue-js-modal": "^1.2.8",
     "vue-loader": "^13.0.4",
+    "vue-loading-spinner": "^1.0.10",
     "vue-resource": "^1.3.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
