Configure Sequelize for Heroku on Staging and Production envs

--- a/server/src/db/config.json
+++ b/server/src/db/config.json
@@ -8,17 +8,9 @@
     "storage": "./src/db/data.test.sqlite"
   },
   "staging": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DATABASE_URL"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DATABASE_URL"
   }
 }
