--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lint:fix": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "flag-icon-css": "^2.8.0",
     "vue": "^2.3.4",
     "vue-router": "^2.6.0"
   },
