chore(JOB-125) : npm start - open /server because of db config

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "clean:server": "(cd server && npm run clean)",
     "clean": "npm run clean:client && npm run clean:server",
     "configure": "(cd server && npm run configure)",
-    "start": "node server/bin/www",
-    "startmon": "nodemon server/bin/www",
+    "start": "(cd server && node server/bin/www)",
+    "startmon": "(cd server && npm run startmon",
+    "start:autoreload": "(cd server && npm run start:autoreload",
     "test:client": "(cd client && npm test)",
     "test:server": "(cd server && npm test)",
     "test": "npm run test:client && npm run test:server",
