review(JOB-125) : add nodemon in devDependencies and parenthesis

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean": "npm run clean:client && npm run clean:server",
     "configure": "(cd server && npm run configure)",
     "start": "(cd server && node server/bin/www)",
-    "startmon": "(cd server && npm run startmon",
-    "start:autoreload": "(cd server && npm run start:autoreload",
+    "startmon": "(cd server && npm run startmon)",
+    "start:autoreload": "(cd server && npm run start:autoreload)",
     "test:client": "(cd client && npm test)",
     "test:server": "(cd server && npm test)",
     "test": "npm run test:client && npm run test:server",
