--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "debug": "~3.0.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
+    "express-http-to-https": "^1.1.3",
     "google-auth-library": "^0.10.0",
     "jade": "^1.11.0",
     "jsonwebtoken": "^7.4.2",
