--- a/client/static/manifest.json
+++ b/client/static/manifest.json
@@ -1,50 +1,13 @@
 {
-    "short_name": "JobBoard",
-    "name": "Job Board OCTO",
+    "name": "",
     "icons": [
         {
-            "src": "/static/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-96x96.png",
+            "src": "/android-chrome-96x96.png",
             "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icon-512x512.png",
-            "sizes": "512x512",
             "type": "image/png"
         }
     ],
-    "theme_color": "#ff0000",
-    "background_color": "#ff0000",
-    "display": "standalone",
-    "start_url": "/"
+    "theme_color": "#ffffff",
+    "background_color": "#ffffff",
+    "display": "standalone"
 }
