--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
   "homepage": "https://github.com/octo-web-front-end-tribe/octo-job-board#readme",
   "devDependencies": {
     "nodemon": "^1.11.0"
+  },
+  "engines": {
+    "node": "8.9.1"
   }
 }
