--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "fs-extra": "^4.0.2",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
     "inject-loader": "^3.0.1",
@@ -64,7 +65,7 @@
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-promise": "^0.1.0",
-    "karma-sinon-chai": "^1.3.1",
+    "karma-sinon-chai": "^1.3.3",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.4",
@@ -81,7 +82,7 @@
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sinon": "^3.2.0",
-    "sinon-chai": "^2.12.0",
+    "sinon-chai": "^2.14.0",
     "url-loader": "^0.5.9",
     "vue-analytics": "^4.2.2",
     "vue-awesome": "^2.3.1",
