--- a/client/package.json
+++ b/client/package.json
@@ -93,6 +93,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vue-toastr": "^2.0.8",
+    "vuejs-datepicker": "^0.9.20",
     "webpack": "^3.5.4",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
