--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^7.4.2",
     "lodash": "^4.17.4",
     "lru-cache": "^4.1.1",
+    "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "node-mailjet": "^3.2.1",
     "node-schedule": "^1.2.4",
@@ -43,7 +44,7 @@
     "sequelize": "^4.4.4",
     "sequelize-cli": "^2.8.0",
     "serve-favicon": "~2.4.3",
-    "sqlite3": "^3.1.9"
+    "sqlite3": "^3.1.13"
   },
   "devDependencies": {
     "chai": "^4.1.1",
