--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.4",
+    "lodash": "^4.17.4",
     "lolex": "^2.1.2",
     "lru-cache": "^4.1.1",
     "mocha": "^3.5.0",
@@ -90,6 +91,7 @@
     "vue-loader": "^13.0.4",
     "vue-loading-spinner": "^1.0.10",
     "vue-resource": "^1.3.4",
+    "vue-select": "github:sagalbot/vue-select",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "vue-toastr": "^2.0.8",
