tech(JOB-215) : make OCTOPOD CALL FREQUENCY CRON as env variables

--- a/server/tools/setup/sample.env
+++ b/server/tools/setup/sample.env
@@ -5,6 +5,7 @@ GOOGLE_CLIENT_ID=
 OCTOPOD_API_URL=
 OCTOPOD_CLIENT_ID=
 OCTOPOD_CLIENT_SECRET=
+OCTOPOD_CALL_FREQUENCY_CRON=
 
 # MailJet
 MAILJET_PUBLIC_KEY=
