--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,12 +24,12 @@ jobs:
             - v1-code-{{ checksum ".circle-cache-key" }}
       - restore_cache:
           keys:
-            - v1-front-dependencies-{{ checksum "client/package-lock.json" }}
+            - v1-front-dependencies-{{ checksum "client/yarn.lock" }}
       - run:
           name: Install front
-          command: npm run install:client
+          command: yarn install:client
       - save_cache:
-          key: v1-front-dependencies-{{ checksum "client/package-lock.json" }}
+          key: v1-front-dependencies-{{ checksum "client/yarn.lock" }}
           paths:
             - ./client/node_modules
 
@@ -42,12 +42,12 @@ jobs:
             - v1-code-{{ checksum ".circle-cache-key" }}
       - restore_cache:
           keys:
-            - v1-back-dependencies-{{ checksum "server/package-lock.json" }}
+            - v1-back-dependencies-{{ checksum "server/yarn.lock" }}
       - run:
           name: Install back
-          command: npm run install:server
+          command: yarn install:server
       - save_cache:
-          key: v1-back-dependencies-{{ checksum "server/package-lock.json" }}
+          key: v1-back-dependencies-{{ checksum "server/yarn.lock" }}
           paths:
             - ./server/node_modules
 
@@ -60,13 +60,13 @@ jobs:
             - v1-code-{{ checksum ".circle-cache-key" }}
       - restore_cache:
           keys:
-            - v1-front-dependencies-{{ checksum "client/package-lock.json" }}
+            - v1-front-dependencies-{{ checksum "client/yarn.lock" }}
       - run:
           name: Lint front
-          command: npm run lint:client
+          command: yarn lint:client
       - run:
           name: Test front
-          command: npm test:client
+          command: yarn test:client
       - store_test_results:
           path: /tmp/circleci-test-results/front
 
@@ -79,13 +79,13 @@ jobs:
             - v1-code-{{ checksum ".circle-cache-key" }}
       - restore_cache:
           keys:
-            - v1-back-dependencies-{{ checksum "server/package-lock.json" }}
+            - v1-back-dependencies-{{ checksum "server/yarn.lock" }}
       - run:
           name: Lint back
-          command: npm run lint:server
+          command: yarn lint:server
       - run:
           name: Test back
-          command: npm test:server
+          command: yarn test:server
       - store_test_results:
           path: /tmp/circleci-test-results/back
 
@@ -98,8 +98,8 @@ jobs:
             - v1-code-{{ checksum ".circle-cache-key" }}
       - restore_cache:
           keys:
-            - v1-front-dependencies-{{ checksum "client/package-lock.json" }}
-      - run: npm run build
+            - v1-front-dependencies-{{ checksum "client/yarn.lock" }}
+      - run: yarn build
 
   deploy_staging:
     <<: *common_properties
