--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist node_modules test/unit/coverage",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit",
+    "test": "yarn unit",
     "test:watch": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
     "lint:fix": "eslint --fix --ext .js,.vue src test/unit/specs test/e2e/specs"
